frontend/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap');
@import url("./Assests//fonts/index.css");

/* @import url('../public/fonts/index.css'); */

* {
    padding: 0px;
    margin: 0px;
}

.bg {
    background-image: url("./Assests/Landing\ Page.png");
    background-size: cover;
    width: 100%;
}

.search-results {
    width: 80%;
    margin: 0 auto;
}

